--- a/finance_project-frontend/src/App.css
+++ b/finance_project-frontend/src/App.css
@@ -1,5 +1,6 @@
 .background {
-  background-color: #666666;
+  /* background-color: #666666; */
+  background-color: #080808;
   width: 100vw;
   height: 100vw;
 }
